--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
   <meta charset="uft-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
-  <title>lab 2 test</title>
-  
+  <title>ITMD-361 Internet Technologies and Web Design</title> 
 </head>
+<body>
+  <h1>ITMD-361 Internet Technologies and Web Design</h1>
+  <h3>semester1 year1</h3>
+    <p>my name is japheth mokami and my email is <em>mokajeff6@gmail.com</em></p>
+  <h2>Professor</h2>
+    <p>daniel krienglstein</p>
+  <h2>Lecture Days,Time and Place</h2>
+    <p>The lectures are conducted everyday
+       from Monday to Friday starting from 8AM to 4PM.
+       The venue is at CTA hall
+    </p>
+    <h2> couse catalogue and description</h2>
+      <p> 
+       The couse covers the basics of html,css and javascript. As you progress you will learn how to create a simple website using html 
+       design the website using css and to add some functionality to it using java
+      </p>
+    <h2> course outline</h2>
+      <p>student compliting this couse will be able to</p>
+      <ul>
+        <li> Recognise html,css and javascript markup and code</li>
+        <li>Select proper markup tags and code to achive a particular result</li>
+        <li>Identify improprely used markup and code</li>
+        <li>produce modern standard compliant web pages</li>
+        <li>deploy web pages to a github server</li>
+       </ul> 
+    <h2> course objectives</h2>  
+       <p> At the conclution of this couse,each student will be able to;</p>
+      <ul>
+        <li>Explain the client and server achitecture of both the internet and web related technologies </li>
+        <li> Use basic text editors or other software tools to create web pages written in html,css,javacript and jquery </li>
+        <li> Deploy web pages to Github using virtual control and Github Desktop</li>
+
+
+      </ul>
+
+
+
+
+
+      </ul>
+
+
+
+
+</body>
   
 
 
