adding an image

--- a/index.html
+++ b/index.html
@@ -36,18 +36,9 @@
         <li>Explain the client and server achitecture of both the internet and web related technologies </li>
         <li> Use basic text editors or other software tools to create web pages written in html,css,javacript and jquery </li>
         <li> Deploy web pages to Github using virtual control and Github Desktop</li>
-
-
       </ul>
 
-
-
-
-
-      </ul>
-
-
-
+   <image src="image1.jpg" atri="profile"></image>
 
 </body>
   
